fix header logo on mobile

--- a/components/card/style/card.module.css
+++ b/components/card/style/card.module.css
@@ -14,7 +14,7 @@
 @media only screen and (max-width: 576px) {
   .root {
     height: 120px !important;
-    width: 100%;
+    width: 100% !important;
     margin: 0;
     margin-top: 14px;
   }
